Fixed display of donut-chart on mobile

--- a/themes/esense/assets/scss/esense/web-app/owl-carousel/_owl-students-activity.scss
+++ b/themes/esense/assets/scss/esense/web-app/owl-carousel/_owl-students-activity.scss
@@ -66,3 +66,11 @@
 .owl-dots{
     display: none;
 }
+
+@media screen and (max-width:500px) {
+    .donut-chart {
+        width: 250px !important;
+        height: 250px !important;
+        margin: 0 auto !important;
+    }
+}
